--- a/comp4128/writeup/writeup.tex
+++ b/comp4128/writeup/writeup.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper]{article}
 \usepackage{fullpage}
+\usepackage{graphicx}
+\usepackage{amsmath}
 
 \renewcommand{\thesection}{Problem \Alph{section}:}
 
