--- a/comp4128/writeup/g.tex
+++ b/comp4128/writeup/g.tex
@@ -1,50 +1,23 @@
 \section{Grachten}
 
-Problem summary: given three lengths $AB$, $AC$, $BD$ forming the base and partial
-lengths for the adjacent side and hypotenuse, determine the remaining length of the
-adjacent side.
+Problem summary: given three lengths $AB$, $AC$, $BD$ forming the base and
+partial lengths for the adjacent side and hypotenuse, determine the remaining
+length of the adjacent side.
 
 \begin{center}
 \includegraphics[scale=0.75]{f_diagram.png}
 \end{center}
 
-Let the goal length be known as $x$. If we consider the point $B$ to be the origin,
-then we can use the provided lengths to determine the equation of the line for the
-hypotenuse. The two points $C$ and $D$ can be represented as follows: \\
+Let the goal length be known as $x$. We use similar triangles to work out the
+correct size of $x$ from the givens:
 
-\begin{center}
-$C = (AC, AB)$, $D = (BD, 0)$  
-\end{center}
+\begin{align*}
+  \frac{x}{AC} &= \frac{x+AB}{BD}             \\[3mm]
+  x \times BD &= x \times AC + AB \times AC   \\[3mm]
+  x &= \frac{AB \times AC}{BD - AC}
+\end{align*}
 
-Finding the gradient of the line $CD$ gives us: 
-
-$$
-\begin{aligned}
-m &= \frac{-AB}{BD - AC}
-\end{aligned}
-$$
-
-Which we then use to find the equation of the line, solving for the y-intercept by
-substituting in $D_x$ which will always give $y = 0$.
-
-$$
-\begin{aligned}
-y &= mx + c \\
-0 &= \frac{-AB}{BD - AC} \cdot BD + c \\
-c &= \frac{AB}{BD - AC} \cdot BD \\
-\end{aligned}
-$$
-
-Finding the length $x$ then becomes a simple matter of subtracting $AB$ from $c$:
-
-$$
-x = c - AB
-$$
-
-To convert this decimal answer into the appropriate format we used David Eppstein's
-rational approximation for real numbers, using the theory of continued fractions. 
-The runtime for this approximation is $O(d)$ where $d$ is the maximum denominator
-allowed.
+We simplify the fraction with the GCD and we're done.
 
 \vspace{0.5cm}
-Overall this runs in $O(1)$ time and memory.
+Overall this runs in $O(\log 1000)$ time because of the GCD and $O(1)$ memory.
