Add writeup for E

--- a/comp4128/writeup/e.tex
+++ b/comp4128/writeup/e.tex
@@ -1,1 +1,12 @@
-\section{e}
+\section{Exponential Towers}
+
+Problem summary: given expression $a^{b^c}$, call this a tower of size 3. How
+many ways are there of writing this number as a tower of size of at least 3?
+Numbers $a,b,c$ are at most 9585, the answer does not exceed $2^{63}$.
+
+We did not solve this one.
+
+The solution would have to look at the prime decomposition of each of $a,b,c$
+and somehow calculate the ways of grouping these to obtain an equivalent number.
+Factoring is done trivially, but the subsequent logic... is left as an exercise
+to the reader.
