got working solution for D

--- a/comp4128/writeup/d.tex
+++ b/comp4128/writeup/d.tex
@@ -1,1 +1,6 @@
-\section{d}
+\section{Diagrams \& Tableaux}
+
+Problem summary: given a young diagram and value for $n$, enumerate the 
+possible semi-standard young tableaux.
+
+Overall this runs in $O(WHO THE FUCK KNOWS)$ time and memory.
